Added exclamation point

--- a/README
+++ b/README
@@ -15,6 +15,6 @@
 #    You should have received a copy of the GNU General Public License
 #    along with this program.  If not, see http://www.gnu.org/licenses/gpl.html
 
-Current program is in extreme alpha stage.  This readme is in an even more extreme alpha stage.
+Current program is in extreme alpha stage.  This readme is in an even more extreme alpha stage!
 
 
